add time serial db

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -63,3 +63,5 @@ time			               #_foodships
 - 需要更新的话,请插入相同时间点的不同值
 - 你不能删除,请在客户端过滤时间周期
 - 你不能通过 tags-key 去删除 tags,只能通过tags-value
+
+#### influxDB 设计时候的考虑 tradeoffs
