add SSTable Learning

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -81,7 +81,7 @@ The storage engine includes the following components:
 > Batches of points are sent to InfluxDB, compressed, and written to a WAL for immediate durability. 
 > Points are also written to an in-memory cache and become immediately queryable. 
 > The in-memory cache is periodically written to disk in the form of TSM files.
-> As TSM files accumulate, the storage engine combines and compacts accumulated them into higher level TSM files.
+> As TSM files accumulate, the storage engine combines(结合) and compacts(压缩) accumulated them into higher level TSM files.
 
 #### Write Ahead Log (WAL)
 The Write Ahead Log (WAL) retains InfluxDB data when the storage engine restarts. The WAL ensures data is durable in case of an unexpected failure.
@@ -177,7 +177,13 @@ The last section is the footer that stores the offset of the start of the index.
 > 我们也能都确定该block 里面有多少数据应该必须被读. 知道这个block的尺寸,我们能够高效的完成IO操作.
 
 
-#### 原理 SSTable
+#### 原理 SSTable （Sorted Strings Table) 然后是 LSM Tree
+1. SSTable 用来干什么的呢?
+> 这个结构和普通的key-value pairs的区别, 可以support range query和random r/w
+![SSTable](./image/xsstable.png.pagespeed.ic.IkMoqaKZX9.webp)
+>
 
+[SSTable and Log Structured Storage: LevelDB](https://www.igvita.com/2012/02/06/sstable-and-log-structured-storage-leveldb/)
+[SSTable](https://www.cnblogs.com/fxjwind/archive/2012/08/14/2638371.html)
 
 #### influxDB 设计时候的考虑 tradeoffs
