add LSM tree image

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -180,10 +180,25 @@ The last section is the footer that stores the offset of the start of the index.
 #### 原理 SSTable （Sorted Strings Table) 然后是 LSM Tree
 1. SSTable 用来干什么的呢?
 > 这个结构和普通的key-value pairs的区别, 可以support range query和random r/w
+    1. 结构特点是 根据 `key` 排序.
+    2. 排序后的数据都是支持随机读的
+
 ![SSTable](./image/xsstable.png.pagespeed.ic.IkMoqaKZX9.webp)
->
+如何应用这种数据结构呢?
+1. WAL 日志先落盘后再返回给客户端.因为日志是顺序写的,所以很快.
+2. 
+![LSM Tree](./image/xmemtable-sstable.png.pagespeed.ic.086A_X2TFe.webp)
+1. On-disk SSTable indexes are always loaded into memory
+2. All writes go directly to the MemTable index
+3. Reads check the MemTable first and then the SSTable indexes
+4. Periodically, the MemTable is flushed to disk as an SSTable
+5. Periodically, on-disk SSTables are "collapsed together"
+
+
+[LevelDB 解读](https://blog.csdn.net/anderscloud/article/details/7182165)
 
 [SSTable and Log Structured Storage: LevelDB](https://www.igvita.com/2012/02/06/sstable-and-log-structured-storage-leveldb/)
+
 [SSTable](https://www.cnblogs.com/fxjwind/archive/2012/08/14/2638371.html)
 
 #### influxDB 设计时候的考虑 tradeoffs
