add LSM tree image

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -110,9 +110,16 @@ After fields are stored safely in TSM files, the WAL is truncated and the cache 
 在字段被存储到TSM文件中区后,chache 将被清理.TSM的压缩非常复杂.然而最高的目标是简单的.长期整理一系列值，以最佳地优化压缩和扫描查询
                                         
 #### Time Series Index (TSI)
-The new time series index (TSI) moves the index to files on disk that we memory map. This means that we let the operating system handle being the Least Recently Used (LRU) memory. Much like the TSM engine for raw time series data we have a write-ahead log with an in-memory structure that gets merged at query time with the memory-mapped index. Background routines run constantly to compact the index into larger and larger files to avoid having to do too many index merges at query time. Under the covers, we’re using techniques like Robin Hood Hashing to do fast index lookups and HyperLogLog++ to keep sketches of cardinality estimates. The latter will give us the ability to add things to the query languages like the SHOW CARDINALITY queries.
+The new time series index (TSI) moves the index to files on disk that we memory map. 
+This means that we let the operating system handle being the Least Recently Used (LRU) memory.
+Much like the TSM engine for raw time series data we have a write-ahead log with an in-memory 
+structure that gets merged at query time with the memory-mapped index. Background routines run
+constantly to compact the index into larger and larger files to avoid having to do too many index 
+merges at query time. Under the covers, we’re using techniques like Robin Hood Hashing to do fast 
+index lookups and HyperLogLog++ to keep sketches of cardinality estimates. The latter will give us 
+the ability to add things to the query languages like the SHOW CARDINALITY queries.
 
-
+[Time-Series-Index-TSI-设计细节](https://leftjs.github.io/2018/09/20/Time-Series-Index-TSI-%E8%AE%BE%E8%AE%A1%E7%BB%86%E8%8A%82/)
 
 
 ## In-memory indexing and the Time-Structured Merge Tree (TSM)
@@ -193,6 +200,9 @@ The last section is the footer that stores the offset of the start of the index.
 3. Reads check the MemTable first and then the SSTable indexes
 4. Periodically, the MemTable is flushed to disk as an SSTable
 5. Periodically, on-disk SSTables are "collapsed together"
+
+![LSM Tree](./image/16145933-76ad5aabbe6b4cd5a2e72af0df739e18.png)
+
 
 
 [LevelDB 解读](https://blog.csdn.net/anderscloud/article/details/7182165)
