--- a/时序数据库.md
+++ b/时序数据库.md
@@ -74,6 +74,11 @@ The storage engine includes the following components:
 - Time-Structed Merge Tree (TSM)
 - Time Series Index (TSI)
 
+> The Time Series Index (TSI) was developed to allow us to go past that upper bound. 
+> TSI stores index data on disk so that we are no longer restricted by RAM.
+> TSI uses the operating system’s page cache to pull hot data into memory and let cold data rest on disk.
+
+
 ## Writing data from API to disk(写数据从API到磁盘)
 
 > The storage engine handles data from the point an API write request is received through writing data to the physical disk. 
@@ -106,7 +111,8 @@ To efficiently compact and store data, the storage engine groups field values by
 The storage engine uses a Time-Structured Merge Tree (TSM) data format. TSM files store compressed series data in a columnar format. To improve efficiency, the storage engine only stores differences (or deltas) between values in a series. Column-oriented storage lets the engine read by series key and omit extraneous data.
 存储引擎用TSM 数据结构,TSM使用的是压缩的列格式。为了提升性能,存储引擎只存储这些字段的差值.面向列式存储可以很方便的找到一系列的key和忽略一些数据
 
-After fields are stored safely in TSM files, the WAL is truncated and the cache is cleared. The TSM compaction code is quite complex. However, the high-level goal is quite simple: organize values for a series together into long runs to best optimize compression and scanning queries.
+After fields are stored safely in TSM files, the WAL is truncated and the cache is cleared. The TSM compaction code is quite complex.
+However, the high-level goal is quite simple: organize values for a series together into long runs to best optimize compression and scanning queries.
 在字段被存储到TSM文件中区后,chache 将被清理.TSM的压缩非常复杂.然而最高的目标是简单的.长期整理一系列值，以最佳地优化压缩和扫描查询
                                         
 #### Time Series Index (TSI)
