时序数据库

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -1,3 +1,4 @@
+InfluxDB 介绍
 #### SQL
 ```shell
 +---------+---------+---------------------+--------------+
@@ -59,16 +60,18 @@ time			               #_foodships
 2015-04-16T12:00:02Z	 6
 2015-04-16T12:00:03Z	 5
 ```
+
 #### InfluxDB is not CRUD
 - 需要更新的话,请插入相同时间点的不同值
 - 你不能删除,请在客户端过滤时间周期
 - 你不能通过 tags-key 去删除 tags,只能通过tags-value
 
-# InfluxDB storage engine
+#### InfluxDB storage engine 存储引擎
 - Data is safely written to disk
 - Queried data is returned complete and correct
 - Data is accurate (first) and performant (second)
-The storage engine includes the following components:
+
+#### The storage engine includes the following components: 该数据库有以下组件
 - Write Ahead Log (WAL)
 - Cache
 - Time-Structed Merge Tree (TSM)
@@ -79,7 +82,7 @@ The storage engine includes the following components:
 > TSI uses the operating system’s page cache to pull hot data into memory and let cold data rest on disk.
 
 
-## Writing data from API to disk(写数据从API到磁盘)
+## Writing data from API to disk(数据从API到磁盘)
 
 > The storage engine handles data from the point an API write request is received through writing data to the physical disk. 
 > Data is written to InfluxDB using line protocol sent via HTTP POST request to the /write endpoint.
@@ -89,7 +92,9 @@ The storage engine includes the following components:
 > As TSM files accumulate, the storage engine combines(结合) and compacts(压缩) accumulated them into higher level TSM files.
 
 #### Write Ahead Log (WAL)
-The Write Ahead Log (WAL) retains InfluxDB data when the storage engine restarts. The WAL ensures data is durable in case of an unexpected failure.
+
+The Write Ahead Log (WAL) retains InfluxDB data when the storage engine restarts.
+The WAL ensures data is durable in case of an unexpected failure.
 
 When the storage engine receives a write request, the following steps occur:
 
@@ -105,6 +110,7 @@ The cache is an in-memory copy of data points currently stored in the WAL. The c
 - Organizes points by key (measurement, tag set, and unique field) Each field is stored in its own time-ordered range.
 - Stores uncompressed data.
 - Gets updates from the WAL each time the storage engine restarts. The cache is queried at runtime and merged with the data stored in TSM files.
+
 #### Time-Structured Merge Tree (TSM)
 To efficiently compact and store data, the storage engine groups field values by series key, and then orders those field values by time. (A series key is defined by measurement, tag key and value, and field key.)
 把字段分成多个键,然后根据时间排序
@@ -113,7 +119,7 @@ The storage engine uses a Time-Structured Merge Tree (TSM) data format. TSM file
 
 After fields are stored safely in TSM files, the WAL is truncated and the cache is cleared. The TSM compaction code is quite complex.
 However, the high-level goal is quite simple: organize values for a series together into long runs to best optimize compression and scanning queries.
-在字段被存储到TSM文件中区后,chache 将被清理.TSM的压缩非常复杂.然而最高的目标是简单的.长期整理一系列值，以最佳地优化压缩和扫描查询
+在字段被存储到TSM文件中区后,cache 将被清理.TSM的压缩非常复杂.然而最高的目标是简单的.长期整理一系列值，以最佳地优化压缩和扫描查询
                                         
 #### Time Series Index (TSI)
 The new time series index (TSI) moves the index to files on disk that we memory map. 
@@ -176,7 +182,8 @@ The last section is the footer that stores the offset of the start of the index.
 > 该 索引包含了 一系列的 键 以字符串排序 然后再按时间排序 
 > The key includes the measurement name, tag set, and one field. Multiple fields per point creates multiple index entries in the TSM file.
 > 该 键 包含了 测量的名字, tag set 含有一个`field` 字段 ,多个 字段 `field` 将会创建多个索引在TSM文件 
->  Each index entry starts with a key length and the key, followed by the block type (float, int, bool, string) and a count of the number of index block entries that follow for that key
+>  Each index entry starts with a key length and the key, followed by the block type (float, int, bool, string)
+> and a count of the number of index block entries that follow for that key
 > 每个索引以索引的长度开始,紧跟着的是块的类型,然后是一个对应着这个key的块实例的计数器,
 > Each index block entry is composed of the min and max time for the block, the offset into the file where the block is located and the size of the block. 
 > 每一个索引块实例包含了 最小与最大时间对应这个块,还有对应 文件的块的偏移量.
@@ -199,7 +206,6 @@ The last section is the footer that stores the offset of the start of the index.
 ![SSTable](./image/xsstable.png.pagespeed.ic.IkMoqaKZX9.webp)
 如何应用这种数据结构呢?
 1. WAL 日志先落盘后再返回给客户端.因为日志是顺序写的,所以很快.
-2. 
 ![LSM Tree](./image/xmemtable-sstable.png.pagespeed.ic.086A_X2TFe.webp)
 1. On-disk SSTable indexes are always loaded into memory
 2. All writes go directly to the MemTable index
