时序数据库

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -1,4 +1,4 @@
-InfluxDB 介绍
+### InfluxDB 介绍
 #### SQL
 ```shell
 +---------+---------+---------------------+--------------+
@@ -72,10 +72,10 @@ time			               #_foodships
 - Data is accurate (first) and performant (second)
 
 #### The storage engine includes the following components: 该数据库有以下组件
-- Write Ahead Log (WAL)
-- Cache
-- Time-Structed Merge Tree (TSM)
-- Time Series Index (TSI)
+- Write Ahead Log (WAL) 日志先行
+- Cache 缓存
+- Time-Structed Merge Tree (TSM) TSM (实际上就是 LSM Tree)
+- Time Series Index (TSI) (时间序列缩影)
 
 > The Time Series Index (TSI) was developed to allow us to go past that upper bound. 
 > TSI stores index data on disk so that we are no longer restricted by RAM.
@@ -85,12 +85,17 @@ time			               #_foodships
 ## Writing data from API to disk(数据从API到磁盘)
 
 > The storage engine handles data from the point an API write request is received through writing data to the physical disk. 
+> 存储引擎从API 写入请求哪里接受数据写入磁盘
 > Data is written to InfluxDB using line protocol sent via HTTP POST request to the /write endpoint.
+> 使用通过HTTP POST请求发送到/write 路径 写入InfluxDB。
 > Batches of points are sent to InfluxDB, compressed, and written to a WAL for immediate durability. 
+> 一大堆的点 被发送到 influxDB,进行压缩被立即写入然后写入到 日志中
 > Points are also written to an in-memory cache and become immediately queryable. 
+> 这些点会被写入到内存的cache然后立即变得可读 
 > The in-memory cache is periodically written to disk in the form of TSM files.
+> 这些内存的cache 周期性的以TSM 文件 这种数据结构 写入到磁盘
 > As TSM files accumulate, the storage engine combines(结合) and compacts(压缩) accumulated them into higher level TSM files.
-
+> 随着这些 TSM file文件的积累,存储引擎会进行结合和压缩把 TSM file 整理成更高级的 TSM 文件
 #### Write Ahead Log (WAL)
 
 The Write Ahead Log (WAL) retains InfluxDB data when the storage engine restarts.
