时序数据库

--- a/时序数据库.md
+++ b/时序数据库.md
@@ -75,7 +75,7 @@ time			               #_foodships
 - Write Ahead Log (WAL) 日志先行
 - Cache 缓存
 - Time-Structed Merge Tree (TSM) TSM (实际上就是 LSM Tree)
-- Time Series Index (TSI) (时间序列缩影)
+- Time Series Index (TSI) (时间序列索引)
 
 > The Time Series Index (TSI) was developed to allow us to go past that upper bound. 
 > TSI stores index data on disk so that we are no longer restricted by RAM.
@@ -99,7 +99,10 @@ time			               #_foodships
 #### Write Ahead Log (WAL)
 
 The Write Ahead Log (WAL) retains InfluxDB data when the storage engine restarts.
+日志先行 保证了 influxDB 的数据当存储引擎重启的时候
 The WAL ensures data is durable in case of an unexpected failure.
+日志先行 保证了 数据的持久化,当数据库出现错误的时候
+
 
 When the storage engine receives a write request, the following steps occur:
 
@@ -111,7 +114,8 @@ When the storage engine receives a write request, the following steps occur:
 When the storage engine restarts, the WAL file is read back into the in-memory database. InfluxDB then answers requests to the /read endpoint.
 
 #### Cache
-The cache is an in-memory copy of data points currently stored in the WAL. The cache:
+The cache is an in-memory copy of data points currently stored in the WAL. 
+The cache:
 - Organizes points by key (measurement, tag set, and unique field) Each field is stored in its own time-ordered range.
 - Stores uncompressed data.
 - Gets updates from the WAL each time the storage engine restarts. The cache is queried at runtime and merged with the data stored in TSM files.
@@ -119,30 +123,41 @@ The cache is an in-memory copy of data points currently stored in the WAL. The c
 #### Time-Structured Merge Tree (TSM)
 To efficiently compact and store data, the storage engine groups field values by series key, and then orders those field values by time. (A series key is defined by measurement, tag key and value, and field key.)
 把字段分成多个键,然后根据时间排序
-The storage engine uses a Time-Structured Merge Tree (TSM) data format. TSM files store compressed series data in a columnar format. To improve efficiency, the storage engine only stores differences (or deltas) between values in a series. Column-oriented storage lets the engine read by series key and omit extraneous data.
-存储引擎用TSM 数据结构,TSM使用的是压缩的列格式。为了提升性能,存储引擎只存储这些字段的差值.面向列式存储可以很方便的找到一系列的key和忽略一些数据
+The storage engine uses a Time-Structured Merge Tree (TSM) data format. 
+TSM files store compressed series data in a columnar format. 
+To improve efficiency, the storage engine only stores differences (or deltas) between values in a series. 
+Column-oriented storage lets the engine read by series key and omit extraneous data.
+存储引擎用TSM 数据结构,TSM使用的是压缩的列格式。为了提升性能,存储引擎只存储这些字段的差值.
+面向列式存储可以很方便的找到一系列的key和忽略一些数据
 
 After fields are stored safely in TSM files, the WAL is truncated and the cache is cleared. The TSM compaction code is quite complex.
 However, the high-level goal is quite simple: organize values for a series together into long runs to best optimize compression and scanning queries.
-在字段被存储到TSM文件中区后,cache 将被清理.TSM的压缩非常复杂.然而最高的目标是简单的.长期整理一系列值，以最佳地优化压缩和扫描查询
+在字段被存储到TSM文件中区后,
+cache 将被清理.TSM的压缩非常复杂.
+然而最高的目标是简单的.
+长期整理一系列值，
+以最佳地优化压缩和扫描查询
                                         
 #### Time Series Index (TSI)
 The new time series index (TSI) moves the index to files on disk that we memory map. 
 This means that we let the operating system handle being the Least Recently Used (LRU) memory.
 Much like the TSM engine for raw time series data we have a write-ahead log with an in-memory 
-structure that gets merged at query time with the memory-mapped index. Background routines run
-constantly to compact the index into larger and larger files to avoid having to do too many index 
-merges at query time. Under the covers, we’re using techniques like Robin Hood Hashing to do fast 
-index lookups and HyperLogLog++ to keep sketches of cardinality estimates. The latter will give us 
-the ability to add things to the query languages like the SHOW CARDINALITY queries.
+structure that gets merged at query time with the memory-mapped index.
+Background routines run constantly to compact the index into larger and larger 
+files to avoid having to do too many index merges at query time. 
+Under the covers, we’re using techniques like Robin Hood Hashing to do fast 
+index lookups and HyperLogLog++ to keep sketches of cardinality estimates. 
+The latter will give us the ability to add things to the query languages like the SHOW CARDINALITY queries.
 
 [Time-Series-Index-TSI-设计细节](https://leftjs.github.io/2018/09/20/Time-Series-Index-TSI-%E8%AE%BE%E8%AE%A1%E7%BB%86%E8%8A%82/)
 
 
 ## In-memory indexing and the Time-Structured Merge Tree (TSM)
 
-
 #### TSM files
+
+> TSM files are a collection of read-only files that are memory mapped. The structure of these files looks very similar to an SSTable in LevelDB or other LSM Tree variants.
+> A TSM file is composed of four sections: header, blocks, index, and footer.
 ```shell
 +--------+------------------------------------+-------------+--------------+
 | Header |               Blocks               |    Index    |    Footer    |
@@ -167,6 +182,10 @@ the ability to add things to the query languages like the SHOW CARDINALITY queri
 +---------------------+-----------------------+----------------------+
 
 
+The index structure can provide efficient access to all blocks as well as the ability to determine the cost associated with accessing a given key. 
+Given a key and timestamp, we can determine whether a file contains the block for that timestamp. 
+We can also determine where that block resides and how much data must be read to retrieve the block. 
+Knowing the size of the block, we can efficiently provision our IO statements.
 
 +-----------------------------------------------------------------------------+
 │                                   Index                                     │
@@ -183,6 +202,7 @@ the ability to add things to the query languages like the SHOW CARDINALITY queri
 +---------+
 The last section is the footer that stores the offset of the start of the index.
 ```
+> 
 > The index is composed of a sequence of index entries ordered lexicographically by key and then by time
 > 该 索引包含了 一系列的 键 以字符串排序 然后再按时间排序 
 > The key includes the measurement name, tag set, and one field. Multiple fields per point creates multiple index entries in the TSM file.
@@ -209,17 +229,16 @@ The last section is the footer that stores the offset of the start of the index.
     2. 排序后的数据都是支持随机读的
 
 ![SSTable](./image/xsstable.png.pagespeed.ic.IkMoqaKZX9.webp)
-如何应用这种数据结构呢?
-1. WAL 日志先落盘后再返回给客户端.因为日志是顺序写的,所以很快.
-![LSM Tree](./image/xmemtable-sstable.png.pagespeed.ic.086A_X2TFe.webp)
-1. On-disk SSTable indexes are always loaded into memory
-2. All writes go directly to the MemTable index
-3. Reads check the MemTable first and then the SSTable indexes
-4. Periodically, the MemTable is flushed to disk as an SSTable
-5. Periodically, on-disk SSTables are "collapsed together"
+2. 如何应用这种数据结构呢?
+    1. WAL 日志先落盘后再返回给客户端.因为日志是顺序写的,所以很快.
+    ![LSM Tree](./image/xmemtable-sstable.png.pagespeed.ic.086A_X2TFe.webp)
+    1. On-disk SSTable indexes are always loaded into memory
+    2. All writes go directly to the MemTable index
+    3. Reads check the MemTable first and then the SSTable indexes
+    4. Periodically, the MemTable is flushed to disk as an SSTable
+    5. Periodically, on-disk SSTables are "collapsed together"
 
 ![LSM Tree](./image/16145933-76ad5aabbe6b4cd5a2e72af0df739e18.png)
-
 
 
 [LevelDB 解读](https://blog.csdn.net/anderscloud/article/details/7182165)
