--- a/好东西.md
+++ b/好东西.md
@@ -1,2 +1,6 @@
 
 http://www.mathcs.emory.edu/~cheung/Courses/554/Syllabus
+
+(about 2PL)[https://www.cnblogs.com/gatsby123/p/10800089.html]
+
+(about 2PL)[https://zhuanlan.zhihu.com/p/57579023]
