--- a/好东西.md
+++ b/好东西.md
@@ -4,3 +4,5 @@ http://www.mathcs.emory.edu/~cheung/Courses/554/Syllabus
 (about 2PL)[https://www.cnblogs.com/gatsby123/p/10800089.html]
 
 (about 2PL)[https://zhuanlan.zhihu.com/p/57579023]
+
+[aaaa]: https://zhuanlan.zhihu.com/p/57579023	"aaaaa"
