--- a/应用性能测试.md
+++ b/应用性能测试.md
@@ -3,5 +3,10 @@ QPS或TPS = 并发数 / 响应时间
 已知外部调用耗时  40 ms
 最大并发数是  300 
 得到qps = 7500
+7500=300/0.04
 并发数 = QPS * 响应时间
+1600=32/0.02
 ```
+现象：16个线程的时候 CPU使用率 
+8C16G的机器
+请求20-25ms延时最大的TPS为 16000
