add redhat blog

--- a/好东西.md
+++ b/好东西.md
@@ -8,3 +8,5 @@ http://www.mathcs.emory.edu/~cheung/Courses/554/Syllabus
 [aaaa]: https://zhuanlan.zhihu.com/p/57579023	"aaaaa"
 
 (IM程序设计)[https://xie.infoq.cn/article/19e95a78e2f5389588debfb1c]
+
+(redhat blog)[https://opensource.com]
