--- a/应用性能测试.md
+++ b/应用性能测试.md
@@ -7,6 +7,10 @@ QPS或TPS = 并发数 / 响应时间
 并发数 = QPS * 响应时间
 1600=32/0.02
 ```
+```shell script
+yum install  httpd-tools -y
+ab -k -n 50000 -c 100 -t 20 http://example.com/
+```
 现象：16个线程的时候 CPU使用率 
 8C16G的机器
 请求20-25ms延时最大的TPS为 16000
